# hashedbuild

./: Cargo.toml  README.md
hashedbuild-cli/: Cargo.toml  cat2files.hashb
hashedbuild-cli/src/: cli.rs  env.rs  main.rs  paths.rs  store_dir.rs
libhashedbuild/: Cargo.toml  build.rs
libhashedbuild/src/: ast.rs  data.rs  eval.rs  lib.rs  runtime.rs  scheme.rs  sha256_hash.rs  tree_sitter.rs
tree-sitter-hashbuild/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package.json  pom.xml  pyproject.toml  result.txt  setup.py  test.hashb  tree-sitter.json
tree-sitter-hashbuild/bindings/c/: tree-sitter-hashbuild.pc.in
tree-sitter-hashbuild/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-hashbuild/bindings/java/main/io/github/treesitter/jtreesitter/hashbuild/: TreeSitterHashbuild.java
tree-sitter-hashbuild/bindings/java/test/: TreeSitterHashbuildTest.java
tree-sitter-hashbuild/bindings/node/: binding.cc
tree-sitter-hashbuild/bindings/python/tests/: test_binding.py
tree-sitter-hashbuild/bindings/python/tree_sitter_hashbuild/: __init__.py  binding.c
tree-sitter-hashbuild/bindings/rust/: build.rs  lib.rs
tree-sitter-hashbuild/bindings/swift/TreeSitterHashbuild/: hashbuild.h
tree-sitter-hashbuild/bindings/swift/TreeSitterHashbuildTests/: TreeSitterHashbuildTests.swift
tree-sitter-hashbuild/bindings/zig/: root.zig  test.zig
tree-sitter-hashbuild/src/: grammar.json  node-types.json  parser.c
tree-sitter-hashbuild/test/corpus/: hashbuild.txt
