[package]
name = "hashedbuild-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
libhashedbuild = { version = "0.1.0", path = "../libhashedbuild" }
tree-sitter = "0.26.11"
tree-sitter-hashbuild = { version = "0.0.1", path = "../tree-sitter-hashbuild" }
