[package]
name = "hashedbuild-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
dirs = "6.0.0"
inquire = "0.9.4"
libhashedbuild = { version = "0.1.0", path = "../libhashedbuild" }
thiserror = "2.0.19"
tree-sitter = "0.26.11"
tree-sitter-hashbuild = { version = "0.0.1", path = "../tree-sitter-hashbuild" }
